# securevector-sdk-hermes

./: CHANGELOG.md  MANIFEST.in  NOTICE  PRIVACY.md  README.md  pyproject.toml
.github/workflows/: ci.yml  develop-preview-publish.yml  release.yml
src/securevector_sdk_hermes/: __init__.py  _version.py  auto.py  client.py  config.py  core.py  costs.py  errors.py  plugin.py  tool_id.py
tests/: test_analyze.py  test_auth.py  test_builtins_drift.py  test_costs.py  test_interceptor.py  test_plugin.py  test_tool_id.py  test_verdict.py
