[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name. Import name is `securevector_sdk_hermes`
# (distribution and import names are independent, same as scikit-learn /
# sklearn). Brand-led, framework-suffixed — the descriptive nominative-fair-use
# pattern; "Hermes" identifies compatibility with NousResearch's hermes-agent
# only. See README "Trademarks".
name = "securevector-sdk-hermes"
version = "1.0.0"
description = "SecureVector SDK for Hermes (NousResearch hermes-agent) — brings the local threat monitor's three controls (tool-call permissions, secret/data-leak detection, threat detection) to every Hermes tool call, with tamper-evident audit logging."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "SecureVector" }]
keywords = ["hermes", "hermes-agent", "llm", "security", "ai-agent", "audit", "compliance", "tool-permissions"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

# The adapter is a thin interception layer. It depends on:
#   - securevector-ai-monitor: the local app + the shipped SecureVectorClient
#     (the detection engine + tamper-evident audit chain live there). One
#     `pip install securevector-sdk-hermes` brings the adapter AND the app.
#   - hermes-agent: pinned to the verified minor — the guard attaches to
#     hermes internals (plugin hooks + tools.registry), so every upstream
#     minor bump must be re-verified against the patch target before the
#     pin is raised (story #183 acceptance gate).
# Everything else (permission resolution, audit forwarding) uses the stdlib.
dependencies = [
    "securevector-ai-monitor>=4.7",
    "hermes-agent>=0.18,<0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

# The Hermes plugin manager scans this group on startup (CLI, gateway, ACP)
# and calls securevector_sdk_hermes.plugin:register(ctx) — zero-config attach.
[project.entry-points."hermes_agent.plugins"]
securevector-guard = "securevector_sdk_hermes.plugin"

[project.urls]
Homepage = "https://securevector.io"
Source = "https://github.com/Secure-Vector/securevector-sdk-hermes"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
